# data-engineer-homework

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
homework/: main.py
homework/common/: config.py  logger.py  spark.py
homework/etl/: driver.py  loaders.py  writers.py
homework/etl/transformers/: __init__.py  functions.py  parsers.py  pipelines.py
tests/etl/transformers/: test_functions.py  test_parsers.py  test_pipelines.py
tests/example_data/: create_sample_data.py
tests/example_data/data1.csv/: .part-00000-4435cb41-6c04-4417-a5d9-d06b2a1370c9-c000.csv.crc  part-00000-4435cb41-6c04-4417-a5d9-d06b2a1370c9-c000.csv
