[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Dominik Kaczmarek <dominik.kaczmarek@deep.bi>"]

[tool.poetry.dependencies]
python = "^3.6"
pyspark = "2.4.7"

[tool.poetry.dev-dependencies]
pytest = "6.2.2"
flake8 = "3.8.4"
black = "20.8b1"
rope = "^0.18.0"
pandas = "0.25.3"

[tool.poetry.scripts]
homework = 'homework.main:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
